tests/macros/rawlist/plugin.stderr
error: option `plugin` does not exist for kind `rawlist`
 --> $DIR/plugin.rs:2:47
  |
2 |     let q = inquisition::questions![rawlist { plugin: todo!() }];
  |                                               ^^^^^^
