tests/macros/rawlist/plugin.rs
fn main() {
    let q = inquisition::questions![rawlist { plugin: todo!() }];
}
